Adjusted jvm flags